# MioTTS-llama.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
docs/: benchmark-report-2026-02-22.md
examples/: codec-benchmark.cpp  stream-benchmark.cpp  stream-compare.cpp  stream-to-device.cpp
scripts/: create_voice_emb_onnx.py  export_miocodec_decoder_onnx.py  export_miocodec_encoder_onnx.py  export_miocodec_onnx.py  extract_codes_onnx.py
src/: codec-backend-ggml.h  codec-backend-onnx.cpp  codec-backend-onnx.h  codec-backend.h  istft.cpp  istft.h  llm-backend-onnx.cpp  llm-backend-onnx.h  main.cpp  miocodec.cpp  miocodec.h  test-to-speech.cpp  test-to-speech.h  text-normalize.cpp  text-normalize.h  token-parser.cpp  token-parser.h  wav-writer.cpp  wav-writer.h
tools/: analyze_wav.py  check_weights.py  compare_codec.py  create_voice_emb.py  create_voice_emb_onnx.py  debug_decoder_layer0.py  debug_decoder_substeps.py  download-models.ps1  download-models.sh  export_miocodec_onnx.py  export_miotts_onnx.py  extract_codes_onnx.py
